# Swift_host_subtraction

./: .buildinfo  .gitattributes  .gitignore  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: deploy-github-pages.yml  python-package.yml
SwiftPhotom/: __init__.py  _version.py  commands.py  errors.py  help.py  uvot.py
_modules/: index.html
_modules/SwiftPhotom/: commands.html  errors.html  uvot.html
_sources/: index.rst.txt
_sources/api/: SwiftPhotom.commands.rst.txt  SwiftPhotom.errors.rst.txt  SwiftPhotom.help.rst.txt  SwiftPhotom.rst.txt  SwiftPhotom.uvot.rst.txt
_sources/inputs/: index.rst.txt
_static/: documentation_options.js
api/: SwiftPhotom.commands.html  SwiftPhotom.errors.html  SwiftPhotom.help.html  SwiftPhotom.html  SwiftPhotom.uvot.html
conda/: meta.yaml
docs/: Makefile  conf.py  index.rst
docs/_templates/: layout.html
docs/extraction/: index.rst
docs/inputs/: index.rst
extraction/: index.html
inputs/: index.html
tests/: __init__.py  test_mymodule.py
