[aliases]
test = pytest

[tool:pytest]
addopts = --verbose -r s

[versioneer]
VCS = git
style = pep440
versionfile_source = Swift_host_subtraction/_version.py
versionfile_build = Swift_host_subtraction/_version.py
tag_prefix = v
parentdir_prefix =

[coverage:run]
source = Swift_host_subtraction
omit =
	Swift_host_subtraction/tests/*
	Swift_host_subtraction/_version.py
	
[metadata]
description-file = README.md
license_file = LICENSE
