[aliases]
test = pytest

[tool:pytest]
addopts = --verbose -r s

[versioneer]
VCS = git
style = pep440
versionfile_source = SwiftPhotom/_version.py
versionfile_build = SwiftPhotom/_version.py
tag_prefix = v
parentdir_prefix =

[coverage:run]
source = SwiftPhotom
omit =
	SwiftPhotom/tests/*
	SwiftPhotom/_version.py
	
[metadata]
description-file = README.md
license_file = LICENSE
